--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -16,6 +16,11 @@
 
 }
 
+.hamburger{
+    display: none;
+}
+
+
 .topNavLorum1 {
     display: flex;
     justify-content: space-between;
@@ -174,9 +179,9 @@
    width: 24rem;
    color: rgb(81, 82, 82);
    display: flex;
-   margin-top: 1rem;
-   align-items: center;
+   flex-direction: row;
    justify-content: space-between;
+   margin-top: 1rem;
    height: 100px;
 }
 
@@ -271,7 +276,6 @@ h3 {
 }
 
 .dropdowncontainer {
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -279,6 +283,10 @@ h3 {
     border: none;
     font-weight: bolder;
     outline: none;
+  }
+
+  .modal{
+    color: white;
   }
   
   .dropdownarrow {
@@ -406,11 +414,7 @@ h3 {
     margin-left: 15px;
 }
 
-.productNameBelow{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 
 @media screen and (max-width: 768px) {
 .topNav {
@@ -421,6 +425,47 @@ h3 {
     width: 0.8rem;
     height: 0.8rem;
     padding-left: 1rem;
+}
+
+.hamburgericon {
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .modaloverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modalcontent {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+  
+  .modalclose {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: white;
+  }
+  
+
+.hamburger{
+    display: block;
 }
 
 .topNavPara {
@@ -539,6 +584,12 @@ h3 {
 @media screen and (max-width: 768px) {
 .topNavPara {
     font-size: 0.7rem;
+}
+
+.dropdowncontainer{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
 }
 
 .description h1 {
